--- a/GSTINVOICE/BOSINVOICErpt.rdlc
+++ b/GSTINVOICE/BOSINVOICErpt.rdlc
@@ -1757,98 +1757,6 @@
           </Border>
         </Style>
       </Tablix>
-      <Rectangle Name="Rectangle1">
-        <ReportItems>
-          <Textbox Name="Textbox32">
-            <CanGrow>true</CanGrow>
-            <KeepTogether>true</KeepTogether>
-            <Paragraphs>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>1. Please mention your invoice number in Cheque</Value>
-                    <Style />
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>2. Please make sure your given information is correct</Value>
-                    <Style />
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value />
-                    <Style />
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-            </Paragraphs>
-            <rd:DefaultName>Textbox32</rd:DefaultName>
-            <Top>0.34028in</Top>
-            <Height>1.17361in</Height>
-            <Width>3.5in</Width>
-            <Style>
-              <Border>
-                <Style>None</Style>
-              </Border>
-              <PaddingLeft>2pt</PaddingLeft>
-              <PaddingRight>2pt</PaddingRight>
-              <PaddingTop>2pt</PaddingTop>
-              <PaddingBottom>2pt</PaddingBottom>
-            </Style>
-          </Textbox>
-          <Textbox Name="Textbox31">
-            <CanGrow>true</CanGrow>
-            <KeepTogether>true</KeepTogether>
-            <Paragraphs>
-              <Paragraph>
-                <TextRuns>
-                  <TextRun>
-                    <Value>Special Instructions</Value>
-                    <Style>
-                      <FontWeight>Bold</FontWeight>
-                    </Style>
-                  </TextRun>
-                </TextRuns>
-                <Style />
-              </Paragraph>
-            </Paragraphs>
-            <rd:DefaultName>Textbox31</rd:DefaultName>
-            <Height>0.27083in</Height>
-            <Width>3.65625in</Width>
-            <ZIndex>1</ZIndex>
-            <Style>
-              <Border>
-                <Style>Solid</Style>
-              </Border>
-              <BackgroundColor>Yellow</BackgroundColor>
-              <PaddingLeft>2pt</PaddingLeft>
-              <PaddingRight>2pt</PaddingRight>
-              <PaddingTop>2pt</PaddingTop>
-              <PaddingBottom>2pt</PaddingBottom>
-            </Style>
-          </Textbox>
-        </ReportItems>
-        <KeepTogether>true</KeepTogether>
-        <Top>3.78819in</Top>
-        <Left>0.155in</Left>
-        <Height>1.75in</Height>
-        <Width>3.65625in</Width>
-        <ZIndex>7</ZIndex>
-        <Style>
-          <Border>
-            <Style>Solid</Style>
-          </Border>
-        </Style>
-      </Rectangle>
       <Tablix Name="Tablix1">
         <TablixBody>
           <TablixColumns>
@@ -2377,7 +2285,7 @@
         <Left>4.18673in</Left>
         <Height>1.75in</Height>
         <Width>2.87085in</Width>
-        <ZIndex>8</ZIndex>
+        <ZIndex>7</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2390,7 +2298,7 @@
         <Left>0.5925in</Left>
         <Height>0.69792in</Height>
         <Width>2.08599in</Width>
-        <ZIndex>9</ZIndex>
+        <ZIndex>8</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2403,7 +2311,7 @@
         <Left>4.76852in</Left>
         <Height>0.69792in</Height>
         <Width>2in</Width>
-        <ZIndex>10</ZIndex>
+        <ZIndex>9</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2431,7 +2339,7 @@
         <Left>5.07947in</Left>
         <Height>0.25in</Height>
         <Width>1.45834in</Width>
-        <ZIndex>11</ZIndex>
+        <ZIndex>10</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2447,7 +2355,7 @@
         <Left>0.01958in</Left>
         <Height>0in</Height>
         <Width>7.20467in</Width>
-        <ZIndex>12</ZIndex>
+        <ZIndex>11</ZIndex>
         <Style>
           <Border>
             <Color>Red</Color>
@@ -2464,7 +2372,10 @@
             <TextRuns>
               <TextRun>
                 <Value>Amount in Words</Value>
-                <Style />
+                <Style>
+                  <FontWeight>Bold</FontWeight>
+                  <Color>White</Color>
+                </Style>
               </TextRun>
             </TextRuns>
             <Style />
@@ -2472,14 +2383,15 @@
         </Paragraphs>
         <rd:DefaultName>Textbox35</rd:DefaultName>
         <Top>5.86111in</Top>
-        <Left>0.155in</Left>
+        <Left>0.01958in</Left>
         <Height>0.25in</Height>
-        <Width>1.67289in</Width>
-        <ZIndex>13</ZIndex>
+        <Width>1.80831in</Width>
+        <ZIndex>12</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
           </Border>
+          <BackgroundColor>Blue</BackgroundColor>
           <PaddingLeft>2pt</PaddingLeft>
           <PaddingRight>2pt</PaddingRight>
           <PaddingTop>2pt</PaddingTop>
@@ -2507,7 +2419,7 @@
         <Left>0.87453in</Left>
         <Height>0.25in</Height>
         <Width>1.45834in</Width>
-        <ZIndex>14</ZIndex>
+        <ZIndex>13</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2526,7 +2438,15 @@
             <TextRuns>
               <TextRun>
                 <Value>=Code.RupeesToWord(Sum(Fields!GrandTotal.Value, "rpt_gsinvoice"))</Value>
-                <Style />
+                <Style>
+                  <FontWeight>SemiBold</FontWeight>
+                </Style>
+              </TextRun>
+              <TextRun>
+                <Value> only</Value>
+                <Style>
+                  <FontWeight>SemiBold</FontWeight>
+                </Style>
               </TextRun>
             </TextRuns>
             <Style />
@@ -2537,11 +2457,12 @@
         <Left>1.85567in</Left>
         <Height>0.25in</Height>
         <Width>5.20191in</Width>
-        <ZIndex>15</ZIndex>
+        <ZIndex>14</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
+          <BackgroundColor>LightSteelBlue</BackgroundColor>
           <PaddingLeft>2pt</PaddingLeft>
           <PaddingRight>2pt</PaddingRight>
           <PaddingTop>2pt</PaddingTop>
