--- a/GSTINVOICE/bin/New folder/BOSINVOICErpt.rdlc
+++ b/GSTINVOICE/bin/New folder/BOSINVOICErpt.rdlc
@@ -4,7 +4,6 @@
     <ReportItems>
       <Line Name="Line1">
         <Top>0.66319in</Top>
-        <Left>0.01389in</Left>
         <Height>0in</Height>
         <Width>7.22425in</Width>
         <Style>
@@ -16,7 +15,6 @@
       </Line>
       <Line Name="Line2">
         <Top>0.11111in</Top>
-        <Left>0.01389in</Left>
         <Height>0in</Height>
         <Width>7.22425in</Width>
         <ZIndex>1</ZIndex>
@@ -35,7 +33,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>GST Invoice</Value>
+                <Value>Bill of Supply</Value>
                 <Style>
                   <FontSize>16pt</FontSize>
                   <FontWeight>ExtraBold</FontWeight>
@@ -48,7 +46,7 @@
         </Paragraphs>
         <rd:DefaultName>Textbox11</rd:DefaultName>
         <Top>0.23958in</Top>
-        <Left>0.03347in</Left>
+        <Left>0.01958in</Left>
         <Height>0.39583in</Height>
         <Width>2.57292in</Width>
         <ZIndex>2</ZIndex>
@@ -88,9 +86,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox12</rd:DefaultName>
-        <Top>0.95139in</Top>
-        <Left>0.01389in</Left>
-        <Height>0.33333in</Height>
+        <Top>0.79514in</Top>
+        <Height>0.25in</Height>
         <Width>7.22425in</Width>
         <ZIndex>3</ZIndex>
         <Style>
@@ -348,8 +345,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>rpt_Customer</DataSetName>
-        <Top>1.57291in</Top>
-        <Left>0.01389in</Left>
+        <Top>1.17708in</Top>
+        <Left>0.01958in</Left>
         <Height>0.75in</Height>
         <Width>4.18829in</Width>
         <ZIndex>4</ZIndex>
@@ -596,8 +593,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>rpt_gsinvoice</DataSetName>
-        <Top>1.57291in</Top>
-        <Left>4.6364in</Left>
+        <Top>1.17708in</Top>
+        <Left>4.62251in</Left>
         <Height>0.75in</Height>
         <Width>2.60174in</Width>
         <ZIndex>5</ZIndex>
@@ -1749,7 +1746,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>rpt_GstTrans</DataSetName>
-        <Top>2.70486in</Top>
+        <Top>2.53819in</Top>
         <Left>0.01958in</Left>
         <Height>1.14584in</Height>
         <Width>7.20466in</Width>
@@ -2286,8 +2283,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>rpt_gsinvoice</DataSetName>
-        <Top>4.10069in</Top>
-        <Left>4.20062in</Left>
+        <Top>3.78819in</Top>
+        <Left>4.18673in</Left>
         <Height>1.75in</Height>
         <Width>2.87085in</Width>
         <ZIndex>7</ZIndex>
@@ -2299,10 +2296,10 @@
       </Tablix>
       <Rectangle Name="Rectangle2">
         <KeepTogether>true</KeepTogether>
-        <Top>6.65278in</Top>
-        <Left>0.60639in</Left>
+        <Top>6.26389in</Top>
+        <Left>0.5925in</Left>
         <Height>0.69792in</Height>
-        <Width>2in</Width>
+        <Width>2.08599in</Width>
         <ZIndex>8</ZIndex>
         <Style>
           <Border>
@@ -2312,8 +2309,8 @@
       </Rectangle>
       <Rectangle Name="Rectangle5">
         <KeepTogether>true</KeepTogether>
-        <Top>6.65278in</Top>
-        <Left>4.78241in</Left>
+        <Top>6.26389in</Top>
+        <Left>4.76852in</Left>
         <Height>0.69792in</Height>
         <Width>2in</Width>
         <ZIndex>9</ZIndex>
@@ -2323,38 +2320,6 @@
           </Border>
         </Style>
       </Rectangle>
-      <Textbox Name="Textbox70">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>Customer Signature</Value>
-                <Style>
-                  <FontWeight>Bold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox70</rd:DefaultName>
-        <Top>7.42014in</Top>
-        <Left>0.80431in</Left>
-        <Height>0.25in</Height>
-        <Width>1.45834in</Width>
-        <ZIndex>10</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
       <Textbox Name="Textbox71">
         <CanGrow>true</CanGrow>
         <KeepTogether>true</KeepTogether>
@@ -2372,11 +2337,11 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox70</rd:DefaultName>
-        <Top>7.42014in</Top>
-        <Left>5.09336in</Left>
+        <Top>7.00347in</Top>
+        <Left>5.07947in</Left>
         <Height>0.25in</Height>
         <Width>1.45834in</Width>
-        <ZIndex>11</ZIndex>
+        <ZIndex>10</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2388,11 +2353,11 @@
         </Style>
       </Textbox>
       <Line Name="Line3">
-        <Top>7.92014in</Top>
-        <Left>0.03347in</Left>
+        <Top>7.29514in</Top>
+        <Left>0.01958in</Left>
         <Height>0in</Height>
         <Width>7.20467in</Width>
-        <ZIndex>12</ZIndex>
+        <ZIndex>11</ZIndex>
         <Style>
           <Border>
             <Color>Red</Color>
@@ -2401,14 +2366,14 @@
           </Border>
         </Style>
       </Line>
-      <Textbox Name="Textbox31">
+      <Textbox Name="Textbox35">
         <CanGrow>true</CanGrow>
         <KeepTogether>true</KeepTogether>
         <Paragraphs>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>Amount in words</Value>
+                <Value>Amount in Words</Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                   <Color>White</Color>
@@ -2418,14 +2383,15 @@
             <Style />
           </Paragraph>
         </Paragraphs>
-        <rd:DefaultName>Textbox31</rd:DefaultName>
-        <Top>6.06945in</Top>
+        <rd:DefaultName>Textbox35</rd:DefaultName>
+        <Top>5.86111in</Top>
+        <Left>0.01958in</Left>
         <Height>0.25in</Height>
-        <Width>1.82789in</Width>
-        <ZIndex>13</ZIndex>
+        <Width>1.80831in</Width>
+        <ZIndex>12</ZIndex>
         <Style>
           <Border>
-            <Style>None</Style>
+            <Style>Solid</Style>
           </Border>
           <BackgroundColor>Blue</BackgroundColor>
           <PaddingLeft>2pt</PaddingLeft>
@@ -2434,20 +2400,14 @@
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
-      <Textbox Name="Textbox32">
+      <Textbox Name="Textbox70">
         <CanGrow>true</CanGrow>
         <KeepTogether>true</KeepTogether>
         <Paragraphs>
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>=Code.RupeesToWord(Sum(Fields!GrandTotal.Value, "rpt_gsinvoice"))</Value>
-                <Style>
-                  <FontWeight>Bold</FontWeight>
-                </Style>
-              </TextRun>
-              <TextRun>
-                <Value xml:space="preserve"> </Value>
+                <Value>Customer Signature</Value>
                 <Style>
                   <FontWeight>Bold</FontWeight>
                 </Style>
@@ -2456,17 +2416,55 @@
             <Style />
           </Paragraph>
         </Paragraphs>
-        <rd:DefaultName>Textbox31</rd:DefaultName>
-        <Top>6.06945in</Top>
-        <Left>1.84178in</Left>
+        <rd:DefaultName>Textbox70</rd:DefaultName>
+        <Top>7.00347in</Top>
+        <Left>0.87453in</Left>
         <Height>0.25in</Height>
-        <Width>5.38246in</Width>
+        <Width>1.45834in</Width>
+        <ZIndex>13</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
+      <Textbox Name="Textbox36">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>=Code.RupeesToWord(Sum(Fields!GrandTotal.Value, "rpt_gsinvoice"))</Value>
+                <Style>
+                  <FontWeight>SemiBold</FontWeight>
+                </Style>
+              </TextRun>
+              <TextRun>
+                <Value> only</Value>
+                <Style>
+                  <FontWeight>SemiBold</FontWeight>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox35</rd:DefaultName>
+        <Top>5.86111in</Top>
+        <Left>1.82789in</Left>
+        <Height>0.25in</Height>
+        <Width>5.22969in</Width>
         <ZIndex>14</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
           </Border>
-          <BackgroundColor>LightBlue</BackgroundColor>
+          <BackgroundColor>LightSteelBlue</BackgroundColor>
           <PaddingLeft>2pt</PaddingLeft>
           <PaddingRight>2pt</PaddingRight>
           <PaddingTop>2pt</PaddingTop>
@@ -2481,7 +2479,7 @@
       </Border>
     </Style>
   </Body>
-  <Width>7.2798in</Width>
+  <Width>7.26591in</Width>
   <Page>
     <PageHeader>
       <Height>1.50222in</Height>
@@ -2509,7 +2507,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox8</rd:DefaultName>
           <Top>0.14458in</Top>
-          <Left>0.03347in</Left>
+          <Left>0.01958in</Left>
           <Height>0.5in</Height>
           <Width>7.20466in</Width>
           <Style>
@@ -2543,7 +2541,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox9</rd:DefaultName>
           <Top>0.71403in</Top>
-          <Left>0.03347in</Left>
+          <Left>0.01958in</Left>
           <Height>0.25in</Height>
           <Width>7.20466in</Width>
           <ZIndex>1</ZIndex>
@@ -2582,8 +2580,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox10</rd:DefaultName>
-          <Top>1.12721in</Top>
-          <Left>2.2418in</Left>
+          <Top>1.1411in</Top>
+          <Left>2.24875in</Left>
           <Height>0.31945in</Height>
           <Width>2.71875in</Width>
           <ZIndex>2</ZIndex>
